webui : prevent linebreak in contenteditable elements

--- a/static/style.css
+++ b/static/style.css
@@ -84,24 +84,30 @@ ul {
 table {
     border-collapse: collapse;
     width: 100%;
-    height:100vh;
+
+    white-space:nowrap;
+
 }
 
 tr:nth-child(odd) { background-color: var(--color-bg); }
 tr:nth-child(even) { background-color: var(--color-hover); }
 
 td, th {
-    /* white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 30px; */
     border: 1px #d8d8d8 dashed;
     text-align: left;
-    padding: 0;
+    padding: 0 .5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+[data-alias-item="edit"] {
+    text-align: center;
 }
 
 th {
     background-color: var(--color-hover);
+    font-size: 1.1em;
+    font-variant: small-caps;
 }
 
 .td-editable {
